# roxide

./: .gitignore  .gitmodules  .tmuxp.yaml  Cargo.toml  README.md  deny.toml
.cargo/: config  config.toml
.github/workflows/: ci.yml  release.yml
librocksdb-sys/: Cargo.toml  README.md  build.rs  build_version.cc  rocksdb_lib_sources.txt
roxide/: Cargo.toml  README.md  build.rs
roxide-librocksdb-sys/: Cargo.toml  README.md  build.rs  build_version.cc  rocksdb_lib_sources.txt
roxide-librocksdb-sys/bzip2/: compress.c
roxide-librocksdb-sys/liburing/: .gitignore  config-host.h
roxide-librocksdb-sys/src/: lib.rs
roxide-librocksdb-sys/tests/: ffi.rs
roxide-rocksdb/: Cargo.toml  README.md
roxide-rocksdb/src/: backup.rs  checkpoint.rs  column_family.rs  compaction_filter.rs  compaction_filter_factory.rs  db.rs  db_iterator.rs  db_options.rs  db_pinnable_slice.rs  env.rs  ffi_util.rs  lib.rs  merge_operator.rs  perf.rs  slice_transform.rs  snapshot.rs  sst_file_writer.rs  statistics.rs  write_batch.rs
roxide-rocksdb/src/transactions/: optimistic_transaction_db.rs  options.rs  transaction.rs  transaction_db.rs
roxide-rocksdb/tests/: test_backup.rs  test_checkpoint.rs  test_column_family.rs  test_comparator.rs  test_compationfilter.rs  test_db.rs  test_iterator.rs  test_merge_operator.rs  test_multithreaded.rs  test_optimistic_transaction_db.rs  test_pinnable_slice.rs  test_property.rs  test_raw_iterator.rs  test_rocksdb_options.rs  test_slice_transform.rs  test_sst_file_writer.rs  test_transaction_db.rs  test_write_batch.rs
roxide-rocksdb/tests/fail/: checkpoint_outlive_db.rs  iterator_outlive_db.rs  open_with_multiple_refs_as_single_threaded.rs  snapshot_outlive_db.rs  snapshot_outlive_db.stderr  snapshot_outlive_transaction.rs  snapshot_outlive_transaction_db.rs  transaction_outlive_transaction_db.rs
roxide-rocksdb/tests/util/: mod.rs
roxide/src/: cache.rs  checkpoint.cpp  checkpoint.h  checkpoint.rs  db_options.cpp  db_options.h  db_options.rs  error.rs  events.rs  ffi_util.h  ffi_util.rs  file_checksum_gen.rs  handle.rs  io_uring.rs  iterator.rs  labels.rs  lib.cpp  lib.h  lib.rs  logging.rs  mem.rs  merge.rs  metrics.rs  perf.cpp  perf.h  perf.rs  stats.rs  status.cpp  status.h  status.rs  tx.cpp  tx.h  tx.rs  write_batch.rs
roxide/src/db/: db.rs  maintenance.rs  mod.rs  opt_txdb.rs  txdb.rs
roxide/src/ops/: all_ops.rs  begin_tx.rs  checkpoint.rs  compact.cpp  compact.h  compact.rs  compact_files.cpp  compact_files.h  delete.cpp  delete.h  delete.rs  flush.cpp  flush.h  flush.rs  get.cpp  get.h  get.rs  get_db_id.rs  get_db_ptr.rs  get_labels.rs  get_prop.cpp  get_prop.h  get_prop.rs  get_seq_num.rs  iterate.rs  key_exists.cpp  key_exists.h  key_exists.rs  live_files.rs  merge.rs  mod.rs  open.cpp  open.h  open.rs  put.rs  stats.rs  with_logger.rs  write.rs
roxide/src/ops/op_metrics/: cf.rs  db.rs  mod.rs
roxide/src/test/: TestDb.rs
roxide/tests/: jemalloc.rs
src/: db_options.rs
