[package]
name = "roxide-librocksdb-sys"
version = "5.2.3-dev"
edition = "2021"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>", "Adam Nelson <adam@elastio.com>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Elastio's fork of `librocksdb-sys` used in support of our `roxide` RocksDB wrapper"
readme = "README.md"
repository = "https://github.com/elastio/roxide"
keywords = [ "bindings", "ffi", "rocksdb" ]
categories = [ "api-bindings", "database", "external-ffi-bindings" ]
links = "rocksdb"
publish = ["elastio-private"]

[features]
default = [ "static" ]
static = []
snappy = []
lz4 = []
zstd = []
zlib = []
bzip2 = []
io_uring = []

# Enable jemalloc support in RocksDB
jemalloc = ["jemalloc-sys"]

[dependencies]
jemalloc-sys = { version = "0.5", optional = true, features = ["unprefixed_malloc_on_supported_platforms"] }
libc = "0.2"

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.65", default-features = false, features = ["runtime"] }
glob = "0.3"
dunce = "1"
