[package]
name = "roxide-librocksdb-sys"
version = "8.1.1-dev"
edition = "2021"
authors = [
    "Karl Hobley <karlhobley10@gmail.com>",
    "Arkadiy Paronyan <arkadiy@ethcore.io>",
    "Adam Nelson <adam@elastio.com>",
]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Elastio's fork of `librocksdb-sys` used in support of our `roxide` RocksDB wrapper"
readme = "README.md"
repository = "https://github.com/elastio/roxide"
keywords = ["bindings", "ffi", "rocksdb"]
categories = ["api-bindings", "database", "external-ffi-bindings"]
links = "rocksdb"
publish = ["elastio-private"]

[features]
default = ["static"]
static = []
snappy = []
lz4 = []
zstd = []
zlib = []
bzip2 = []
# TODO: if building folly is ever made reliable, it should be enabled when io_uring is
# without folly, Rocks will compile fine with io uring enabled but it won't actually do async IO
#io_uring = ["folly"]
io_uring = []
# TODO: re-enable this once it's actually working reliably.  If ever.
# folly = ["duct", "pkg-config"]

# Enable jemalloc support in RocksDB
jemalloc = ["jemalloc-sys"]

[dependencies]
jemalloc-sys = { version = "0.5", optional = true, features = [
    "unprefixed_malloc_on_supported_platforms",
] }
libc = "0.2"

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
bindgen = { version = "0.65", default-features = false, features = ["runtime"] }
# Patch version is pinned because of this issue which causes failing MacOS builds:
# https://github.com/rust-lang/cc-rs/issues/1001
cc = { version = "= 1.0.83", features = ["parallel"] }
duct = { version = "0.13.6", optional = true }
dunce = "1"
glob = "0.3"
pkg-config = { version = "0.3", optional = true }
