[package]
name = "roxide-rocksdb"
description = "Elastio's fork of `rocksdb` crate which `roxide` wraps and makes more Rust-y"
version = "4.1.1"
edition = "2018"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>", "Adam Nelson <adam@elastio.com>"]
repository = "https://github.com/elastio/roxide"
license = "Apache-2.0"
categories = [ "database" ]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/elastio/roxide"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]
publish = ["elastio-private"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2"]
valgrind = []
snappy = ["roxide-librocksdb-sys/snappy"]
lz4 = ["roxide-librocksdb-sys/lz4"]
zstd = ["roxide-librocksdb-sys/zstd"]
zlib = ["roxide-librocksdb-sys/zlib"]
bzip2 = ["roxide-librocksdb-sys/bzip2"]
multi-threaded-cf = []

[dependencies]
libc = "0.2"
roxide-librocksdb-sys = { path = "../roxide-librocksdb-sys", registry = "elastio-private", version = "^4.1.1"}

[dev-dependencies]
trybuild = "1.0"
tempfile = "3.1"
pretty_assertions = "0.7"
