[package]
name = "roxide-rocksdb"
description = "Elastio's fork of `rocksdb` crate which `roxide` wraps and makes more Rust-y"
version = "8.0.0"
edition = "2021"
authors = [
    "Tyler Neely <t@jujit.su>",
    "David Greenberg <dsg123456789@gmail.com>",
    "Adam Nelson <adam@elastio.com>",
]
repository = "https://github.com/elastio/roxide"
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/elastio/roxide"
exclude = [".gitignore", ".travis.yml", "deploy.sh", "test/**/*"]
publish = ["elastio-private"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2"]
valgrind = []
snappy = ["roxide-librocksdb-sys/snappy"]
lz4 = ["roxide-librocksdb-sys/lz4"]
zstd = ["roxide-librocksdb-sys/zstd"]
zlib = ["roxide-librocksdb-sys/zlib"]
bzip2 = ["roxide-librocksdb-sys/bzip2"]
io_uring = ["roxide-librocksdb-sys/io_uring"]
multi-threaded-cf = []
serde1 = ["serde"]

[dependencies]
libc = "0.2"
roxide-librocksdb-sys = { path = "../roxide-librocksdb-sys" , version = "8.0.0", registry = "elastio-private" }
serde = { version = "1", features = [ "derive" ], optional = true }

# clippy was never run on the rust-rocksdb code, and once it was brought into the same repo with
# `roxide` issues appeared.  It's not a good use of time to fix this third-party code now
[lints.clippy]
all="allow"
