[package]
name = "roxide"
description = """
Elastio's comprehensive Rust bindings for RocksDB.

Builds on a fork of rust-rocksdb, adding support for missing functionality, async, and a lot of Rust conveniences.
"""
version = "4.1.6"
authors = ["Adam Nelson <adam@elastio.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = ["elastio-private"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["anyhow", "static", "lz4", "zstd"]

# Link RocksDB and all of its dependencies as a static library
static = ["roxide-librocksdb-sys/static"]

# Enable LZ4 compression in RocksDB
lz4 = ["roxide-librocksdb-sys/lz4", "rocksdb/lz4"]

# Enable zstd compression in RocksDB
zstd = ["roxide-librocksdb-sys/zstd", "rocksdb/zstd"]

# Enable jemalloc support in RocksDB
# NOTE: The Rust code will use whatever the Rust allocator is in the current process
# Enabling this feature won't automatically make the Rust code use jemalloc.  For that you
# must set the allocator in the `main.rs` of whatever binary crate hosts RocksDB.
# This feature takes a dependency on the Rust jemallocator crate but it only causes the RocksDB
# C++ code to use jemalloc.
jemalloc = ["roxide-librocksdb-sys/jemalloc", "jemalloc-ctl"]

[dependencies]
anyhow = { version = "1.0", optional = true }
async-trait = "0.1.48"
cheburashka = { version = "4.0", registry = "elastio-private" }
elasyncio = { version = "3.0", registry = "elastio-private" }
cpp = "0.5"
futures = "0.3"
hex = "0.4"
jemalloc-ctl = { version = "0.3", optional = true }
json = "0.12"
lazy_static = "1.4"
libc = "0.2"
roxide-librocksdb-sys = { path = "../roxide-librocksdb-sys", registry = "elastio-private", default_features = false ,version = "^4.1.6"}
log = "0.4" # Needed only for the log level enum
maplit = "1.0"
num_enum = "0.5.1"
num-traits = "0.2"
once_cell = "1.7"
parking_lot = "0.11"
pin-project = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rocksdb = { path = "../roxide-rocksdb",  registry = "elastio-private", package = "roxide-rocksdb", default_features = false, features = ["multi-threaded-cf"] ,version = "^4.1.6"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.5"
snafu = { version = "0.6", features = ["backtraces", "futures"] }
strum = { version = "0.23", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.4", features = ["full"] }
try-again = { version = "2.0", registry = "elastio-private", features = ["rand"] }

[dev-dependencies]
assert_matches = "1.4"
glob = "0.3.0"
more-asserts = "0.2"
num_cpus = "1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
uuid = "0.8.1"
walkdir = "2.3.1"

[build-dependencies]
cpp_build = "0.5"
